--- a/web/views/pages/index.ejs
+++ b/web/views/pages/index.ejs
@@ -60,10 +60,7 @@
         <!-- Set Global Variables -->
         <script>
             var bundleHash = '<%= bundleHash %>';
-            var locale = '<%= locale %>';
-            var FBLocale = '<%= FBLocale %>';
             var resolvePath = <%- resolvePath %>;
-            var locales = <%- JSON.stringify(locales) %>;
             var isCordova = <%= (typeof isCordova !== 'undefined' && isCordova) %>;
         </script>
 
@@ -102,6 +99,6 @@
         <!-- Google Analytics -->
         <script async src="https://www.googletagmanager.com/gtag/js?id=UA-79729918-1"></script>
     </head>
-    <body lang="<%= locale %>" id="app"></body>
+    <body id="app"></body>
 
 </html>
